Feature: Implement pagination, detailed retrieval, and filtering for lending records. Introduce exception handling for resource not found and invalid operations. Add comprehensive test coverage for controller and service methods. Implement LendingRecordController.